game/02-CSS/base.css
/* ... */
#map {
	position: absolute;
	left: 0px;
	top: 0px;
	z-index: 10;
}

#maparrow {
	position: absolute;
	left: 0px;
	top: 0px;
	z-index: 20;
}

#ui-bar-toggle {
	z-index: 500;
}

#ui-bar {
	z-index: 300;
}

.stowed{
	z-index: 298 !important;
}

.solidBorderContainer	{
	border: 1px solid #333;
	padding: 5px;
}

.debugLines-audience {
	border: dotted red 1px;
}

.debugLines-combat {
	border: dotted yellow 1px;
}

.debugLines-effectsman {
	border: dotted green 1px;
}

.debugLines-stateman {
	border: dotted cyan 1px;
}

.debugLines-actionsman {
	border: dotted pink 1px;
}

.debugLines-beast {
	border: dotted blue 1px;
}

.debugLines-tentacles {
	border: dotted yellow 1px;
}

.debugLines-actionstentacles {
	border: dotted pink 1px;
}

.debugLines-effectstentacleadv {
	border: dotted green 1px;
}

.debugLines-swarm {
	border: dotted green 1px;
}

.debugLines-swarmactions {
	border: dotted pink 1px;
}

.reducedLineHeight .passage {
	line-height: 1.5;
}

body.has-images header#title {
	display: none;
}
body.has-images #story-caption #storyCaptionDiv {
	/* 256 px: images
	2.5 em: ui-bar-body margin-top */
	margin-top: calc(256px - 2.5em);
}

body.has-images #story-caption .storyCaptionDivExtended {
	margin-top: calc(281px - 2.5em) !important;
}

.nostyle {
	list-style: none;
}

.shopCustomColors {
	float:left;
	width: 48%;
	min-width: 375px;
	border: solid 2px #555;
	padding:4px;
	height: 310px;
}

.shopImg {
	height: 192px;
	width: 128px;
	overflow: hidden;
	background-color: #222;
}

.shopImg > * {
	position: absolute;
	height: 192px;
	left:-32px;
	overflow: hidden;
}

.hideImageOverflow {
	overflow: hidden;
	height: 160px;
	width: 128px;
	position: relative;
}

/*Wardrobe UI*/
.wardrobeItem {

	display: inline-block;
	padding: 2px;
	float: left;
	border: solid 1px #aaa;
	height: 30px;
	width: 48%;
	min-width: 400px;
	margin: 0px 3px 3px;
	white-space: nowrap;
	overflow: hidden;
}

#wardrobeItemDetails {
	display: inline-block;
	padding: 2px;
	float: left;
	border: solid 1px #aaa;
	height: 100%;
	width: 90%;
	min-width: 400px;
	margin: 0px 30px 9px 30px;
	/*white-space: nowrap;*/
	overflow: hidden;
}

#wardrobeLinks .selected {
	color: #FFD700;
	text-decoration: underline;
}

.clothingBox {
	display: inline-block;
	float: left;
	border: solid 2px #fff;
	height: 250px;
	width: 270px;
	padding: 4px;
	margin: 2px;
}

.clothingBox div{
	position: relative;
	bottom: 0px;
	height: 190px;
	overflow-y: scroll;
}

.clothingBox div ul{
	margin-left: 0px;
}

#customColor div {
	height: 30px;
	width: 200px;
	background-color: red;
}

.presetConfirm {
	line-height: 1.4;
}

.presetConfirm ul {
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

.red {
	color: #EC3535;
}

.pink {
	color: #E40081;
}

.light-pink {
	color: #d67caf;
}

.purple {
	color: #AA4BC8;
}

.blue {
	color: #4372FF;
}

.lblue,
.light-blue {
	color: #559BC0;
}

.teal {
	color: #08C1C1;
}

.green {
	color: #38B20A;
}

.brown {
	color: #4C2217;
}

.brat {
	color: #B75D41;
}

.meek {
	color: #C44B8B;
}

.def {
	color: #D20000;
}

.hide a {
	color: #eee;
	text-decoration: none;
}

.hide a:hover {
	color: #eee;
	text-decoration: none;
}

.sub {
	color: #AA4BC8;
}

.gold, .gold button, .goldLink a {
	color: #FFD700;
}

.silver {
	color: silver;
}

.bronze {
	color: #CD7F32;
}

.steel {
	color: #8d9496;
}

.blue-steel {
	color: #393747;
}

.yellow,
.pale-yellow {
	color: #FFD700;
}

.orange {
	color: #f28500;
}

.tangerine,
.pale-tangerine {
	color: #f28500;
}

.black {
	color: #929292;
}

.brown {
	color: #aa7243;
}

.softbrown {
	color: #a45e16;
}

.lightbrown {
	color: #C5793A;
}

.burntorange {
	color: #d47730;
}

.softblond {
	color: #e4cd87;
}

.platinum {
	color: #FEF593;
}

.ashy {
	color: #d3cfaa;
}

.strawberry {
	color: #F08C51;
}

.lewd {
	color: #E04880;
}

.grey {
	color: #B7B7B7;
}

.tan {
	color: #D2B48C;
}

.sand {
	color: #FFDFA1;
}

.olive {
	color: #8E8E38;
}

.navy {
	color: #667DC1;
}

.wine {
	color: #8B3626;
}

/* background colours */
.bg-red {
	background-color: #EC3535;
}

.bg-pink {
	background-color: #E40081;
}

.bg-light-pink {
	background-color: #d67caf;
}

.bg-purple {
	background-color: #AA4BC8;
}

.bg-blue {
	background-color: #4372FF;
}

.bg-lblue,
.bg-light-blue {
	background-color: #559BC0;
}

.bg-teal {
	background-color: #08C1C1;
}

.bg-green {
	background-color: #38B20A;
}

.bg-light-green {
	background-color: #7caf7c;
}

.bg-brown {
	background-color: #4C2217;
}

.bg-brat {
	background-color: #B75D41;
}

.bg-meek {
	background-color: #C44B8B;
}

.bg-def {
	background-color: #D20000;
}

.bg-sub {
	background-color: #AA4BC8;
}

.bg-gold {
	background-color: #FFD700;
}

.bg-silver {
	background-color: silver;
}

.bg-bronze {
	background-color: #CD7F32;
}

.bg-steel {
	background-color: #8d9496;
}

.bg-blue-steel {
	background-color: #393747;
}

.bg-yellow,
.bg-pale-yellow {
	background-color: #FFD700;
}

.bg-orange {
	background-color: #f28500;
}

.bg-tangerine,
.bg-pale-tangerine {
	background-color: #f28500;
}

.bg-black {
	background-color: #000;
}

.bg-white,
.bg-pale-white {
	background-color: #EEE;
}

.bg-brown {
	background-color: #aa7243;
}

.bg-softbrown {
	background-color: #a45e16;
}

.bg-lightbrown {
	background-color: #C5793A;
}

.bg-burntorange {
	background-color: #d47730;
}

.bg-softblond {
	background-color: #e4cd87;
}

.bg-platinum {
	background-color: #FEF593;
}

.bg-ashy {
	background-color: #d3cfaa;
}

.bg-strawberry {
	background-color: #F08C51;
}

.bg-lewd {
	background-color: #E04880;
}

.bg-grey {
	background-color: #B7B7B7;
}

.bg-tan {
	background-color: #D2B48C;
}

.bg-sand {
	background-color: #FFDFA1;
}

.bg-olive {
	background-color: #8E8E38;
}

.bg-navy {
	background-color: #667DC1;
}

.bg-wine {
	background-color: #8B3626;
}

.bold {
	font-weight: bold;
}

.italic {
	font-style: italic;
}

.general {
	opacity: 0.99;
}

.wetstage2 {
	opacity: 0.90;
		filter: brightness(0.95);

}

.wetstage3 {
	opacity: 0.75;
		filter: brightness(0.90);

}
/* ... */

